test/unittest/error/tst.clause_scope-regular.r.p
#!/bin/sed -f
# This report has a variable probe ID in it.
s/ID [0-9][0-9]*: profile/ID nnn: profile/
